@@ -1,6 +1,6 @@
 /**
 	\file "AST/import_root.cc"
-	$Id: import_root.cc,v 1.3 2005/12/13 04:15:09 fang Exp $
+	$Id: import_root.cc,v 1.3.2.1 2006/01/22 00:39:58 fang Exp $
  */
 
 #include <iostream>
@@ -11,6 +11,11 @@
 #include "Object/common/namespace.h"
 #include "common/TODO.h"
 #include "util/what.h"
+
+#if NONTERMINAL_IMPORT
+#include "AST/token.h"
+#include "AST/token_string.h"
+#endif
 
 namespace util {
 SPECIALIZE_UTIL_WHAT(HAC::parser::imported_root, "(imported-root)")
@@ -23,9 +28,24 @@ namespace parser {
 //=============================================================================
 // class imported_root method definitions
 
+#if NONTERMINAL_IMPORT
+imported_root::imported_root(excl_ptr<root_body>& r,
+		excl_ptr<const keyword_position>& k,
+		excl_ptr<const token_quoted_string>& f, 
+		const string& n,
+		const bool s) :
+		root(r),
+		import(k), rel_file(f),
+		name(n), seen(s) {
+	NEVER_NULL(import);
+	NEVER_NULL(rel_file);
+}
+#else
+//- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 imported_root::imported_root(excl_ptr<root_body>& r, const string& n,
 		const bool s) :
 		root(r), name(n), seen(s) { }
+#endif
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 imported_root::~imported_root() { }
@@ -39,6 +59,20 @@ imported_root::string_compare(const char*) const {
 	FINISH_ME_EXIT(Fang);
 	return 0;
 }
+
+//- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+#if NONTERMINAL_IMPORT
+line_position
+imported_root::leftmost(void) const {
+	return import->leftmost();
+}
+
+//- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+line_position
+imported_root::rightmost(void) const {
+	return rel_file->rightmost();
+}
+#endif
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 /**
