@@ -4,7 +4,7 @@ parser stacks:
 state	value
 #STATE#	(null) 
 #STATE#	list<(root_item)>: (instance-decl) ... [5:1..6]
-#STATE#	(imported-root) [6:1]
+#STATE#	(imported-root) [7:1..18]
 in state #STATE#, possible rules are:
 	top_root : body .  (#RULE#)
 	body : body . body_item  (#RULE#)
